--- a/asset/.env.example
+++ b/asset/.env.example
@@ -1,9 +1,9 @@
 JWT_PUBLIC_KEY=
 
 JWT_EXPIRATION_MS=
-DATABASE_URL_DEV=
-DATABASE_USERNAME_DEV=
-DATABASE_PASSWORD_DEV=
+DATABASE_URL_ASSET=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 
 ASSET_URL=
 FINANCE_URL=
