--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -7,14 +7,36 @@ services:
     restart: always
     ports:
       - "8080:8080"
-    
+    environment:
+      - DATABASE_URL_ASSET=${DATABASE_URL_ASSET}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api
   finance:
     image: gcr.io/propensi-451504/finance:latest
     container_name: finance_service
     restart: always
     ports:
       - "8081:8081"
-    
+    environment:
+      - DATABASE_URL_FINANCE=${DATABASE_URL_FINANCE}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api
 
   profile:
     image: gcr.io/propensi-451504/profile:latest
@@ -22,6 +44,19 @@ services:
     restart: always
     ports:
       - "8082:8082"
+    environment:
+      - DATABASE_URL_PROFILE=${DATABASE_URL_PROFILE}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api
     
 
   project:
@@ -30,7 +65,18 @@ services:
     restart: always
     ports:
       - "8083:8083"
-    
+    environment:
+      - DATABASE_URL_PROJECT=${DATABASE_URL_PROJECT}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api  
 
   purchase:
     image: gcr.io/propensi-451504/purchase:latest
@@ -38,7 +84,18 @@ services:
     restart: always
     ports:
       - "8084:8084"
-    
+    environment:
+      - DATABASE_URL_PURCHASE=${DATABASE_URL_PURCHASE}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api
 
   resource:
     image: gcr.io/propensi-451504/resource:latest
@@ -46,6 +103,18 @@ services:
     restart: always
     ports:
       - "8085:8085"
+    environment: 
+      - DATABASE_URL_RESOURCE=${DATABASE_URL_RESOURCE}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://asset:8080/api
+      - ASSET_URL=http://finance:8081/api
+      - FINANCE_URL=http://profile:8082/api
+      - PROJECT_URL=http://project:8083/api
+      - PURCHASE_URL=http://purchase:8084/api
+      - RESOURCE_URL=http://resource:8085/api
 
 networks:
   default:
