--- a/profile/.env.example
+++ b/profile/.env.example
@@ -1,8 +1,8 @@
 JWT_SECRET_KEY=
 JWT_EXPIRATION_MS=
-DATABASE_URL_DEV=
-DATABASE_USERNAME_DEV=
-DATABASE_PASSWORD_DEV=
+DATABASE_URL_PROFILE=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 
 POSTGRES_USER=
 POSTGRES_PASSWORD=
