--- a/project/.env.example
+++ b/project/.env.example
@@ -2,9 +2,9 @@ JWT_SECRET_KEY=
 JWT_PUBLIC_KEY=
 
 JWT_EXPIRATION_MS=
-DATABASE_URL_DEV=
-DATABASE_USERNAME_DEV=
-DATABASE_PASSWORD_DEV=
+DATABASE_URL_PROJECT=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 
 ASSET_URL=
 FINANCE_URL=
