--- a/resource/src/main/resources/application.yml
+++ b/resource/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   application:
     name: resource
   datasource:
-    url: ${DATABASE_URL_DEV}
-    username: ${DATABASE_USERNAME_DEV}
-    password: ${DATABASE_PASSWORD_DEV}
+    url: ${DATABASE_URL_RESOURCE}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   thymeleaf:
     cache: false
   devtools:
@@ -27,6 +27,11 @@ resource:
   app:
     jwtPublicKey: ${JWT_PUBLIC_KEY}
     jwtExpirationMs: ${JWT_EXPIRATION_MS}
+    profileUrl: ${PROFILE_URL}
+    financeUrl: ${FINANCE_URL}
+    projectUrl: ${PROJECT_URL}
+    purchaseUrl: ${PURCHASE_URL}
+    resourceUrl: ${RESOURCE_URL}
 
 logging:
   file:
